--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,13 +2,13 @@
 name = "whiterabbit"
 description = "A nodepack designed to help you work with video from within ComfyUI that specializes in handling image batches efficiency and creating video loops."
 version = "1.0.0"
-license = {file = "LICENSE"} 
+license = {file = "LICENSE"}
 classifiers = [
      "Operating System :: OS Independent",
      "Environment :: GPU :: NVIDIA CUDA",
 ]
 
-dependencies = ["torchlanc"]
+dependencies = ["torchlanc", "packaging"]
 
 [project.urls]
 Repository = "https://github.com/Artificial-Sweetener/comfyui-WhiteRabbit"
@@ -19,4 +19,4 @@ Documentation = "https://github.com/Artificial-Sweetener/comfyui-WhiteRabbit/wik
 PublisherId = "artificialsweetener"
 DisplayName = "WhiteRabbit"
 Icon = ""
-includes = [] 
+includes = []
